statum-macros/tests/ui/invalid_transition_conditional.stderr
error: Invalid transition return type for `decide`: expected return type like `Machine<NextState>` (optionally wrapped in `Option`/`Result`).

       Expected:
         fn decide(self) -> ProcessMachine<NextState>

       Actual:
         Decision
  --> tests/ui/invalid_transition_conditional.rs:27:5
   |
27 | /     fn decide(self, event: u8) -> Decision {
28 | |         if event == 0 {
29 | |             Decision::Next(self.transition())
30 | |         } else {
...  |
33 | |     }
   | |_____^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_transition_conditional.rs:34:2
   |
34 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_transition_conditional.rs`
